--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio!</title>
-</head>
-<body>
-    <h1>Bonjour a tous...</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Sostech Inc.</title>
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <img src="img/moiA4.jpg" alt="Logo" />
+      </header>
+      <nav>
+        <li><a href="#">home</a></li>
+        <li><a href="#">A propos</a></li>
+        <li><a href="#">Publicite</a></li>
+        <li><a href="#">Developement Web</a></li>
+        <li><a href="#">Formations</a></li>
+        <li><a href="#">Contact</a></li>
+      </nav>
+      <main>main</main>
+      <footer>
+        <p>Copyright@ Sostech Inc. - 2019</p>
+      </footer>
+    </div>
+  </body>
 </html>
