--- a/index.html
+++ b/index.html
@@ -15,12 +15,50 @@
       <nav>
         <li><a href="#">home</a></li>
         <li><a href="#">A propos</a></li>
-        <li><a href="#">Publicite</a></li>
-        <li><a href="#">Developement Web</a></li>
+        <li><a href="#">Publicit&eacute;</a></li>
+        <li><a href="#">D&eacute;velopement Web</a></li>
         <li><a href="#">Formations</a></li>
+        <li><a href="#">Maintenance Informatique</a></li>
         <li><a href="#">Contact</a></li>
       </nav>
-      <main>main</main>
+      <main>
+        <section class="slogan">
+          <p>Ensemble, acqu&eacute;rons la technologie.</p>
+        </section>
+        <section class="services">
+          <p>Nos Services</p>
+          <div>
+            <h1>Publicit&eacute;</h1>
+            <p>
+              Des besoins en imprimerie? Nous vous assistons de l'id&eacute;e
+              &agrave; la r&eacute;alisation de votre projet de communication.
+            </p>
+          </div>
+          <div>
+            <h1>D&eacute;velopement Web</h1>
+            <p>
+              Besoin d'une pr&eacute;sence sur la toile? Faites connaitre votre
+              entreprise et vos produits simplement et gr&acirc;ce aux
+              technologies de l'heure.
+            </p>
+          </div>
+          <div>
+            <h1>Formations</h1>
+            <p>
+              Besoin d'acquerir des connaissances logicielles ou informatiques?
+              Nous prodiguons des formations sur mesure, peu importe votre
+              niveau.
+            </p>
+          </div>
+          <div>
+            <h1>Maintenance Informatique</h1>
+            <p>
+              Un souci avec votre PC? Logiciel ou Hardware... N'h&eacute;sitez
+              pas &agrave; nous contacter, la solution n'est pas si loin.
+            </p>
+          </div>
+        </section>
+      </main>
       <footer>
         <p>Copyright@ Sostech Inc. - 2019</p>
       </footer>
